feat: add cache and /poke
- /poke endpoint validates whether an endpoint is scrapeable

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ spacy = "*"
 fastapi = "*"
 uvicorn = "*"
 scikit-learn = "*"
+fastapi-cache2 = {extras = ["memcache"], version = "*"}
 
 [dev-packages]
 ipykernel = "*"
