feat: [v2] LLM powered scraping engine

--- a/Pipfile
+++ b/Pipfile
@@ -19,12 +19,19 @@ fastapi = "*"
 uvicorn = "*"
 scikit-learn = "*"
 fastapi-cache2 = {extras = ["memcache"], version = "*"}
+langchain = "*"
 
 [dev-packages]
 ipykernel = "*"
 autopep8 = "*"
 build = "*"
 mongomock = "*"
+black = "*"
+isort = "*"
+flake8 = "*"
+docformatter = "*"
+pre-commit = "*"
+pytest-xdist = "*"
 
 [requires]
 python_version = "3.9"
